# mockapp

./: .gitignore  AGENTS.md  pyproject.toml
src/mockapp/: __main__.py  main.py
tests/: test_smoke.py
